--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "wallaby-webpack": "0.0.9"
   },
   "scripts": {
-    "test": "mocha -w"
+    "test": "./node_modules/.bin/mocha --compilers js:babel/register -w"
   },
   "repository": {
     "type": "git",
