--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "chai": "^3.3.0",
     "isparta": "^3.1.0",
     "istanbul": "^0.3.22",
+    "live-server": "^0.9.1",
     "mocha": "^2.3.3",
     "sinon": "^1.17.2",
     "wallaby-webpack": "0.0.9"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha --compilers js:babel/register -w"
+    "test": "./node_modules/.bin/mocha --compilers js:babel/register -w",
+    "docs": "esdoc -c esdoc.json && open ./esdoc/index.html",
+    "start": "live-server"
   },
   "repository": {
     "type": "git",
