--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel": "^5.8.23",
     "babel-runtime": "^5.8.25",
     "chai": "^3.3.0",
+    "esdoc": "^0.4.3",
     "isparta": "^3.1.0",
     "istanbul": "^0.3.22",
     "live-server": "^0.9.1",
